--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@hapi/joi": "^17.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^4.0.3",
+    "http-errors": "^1.7.3",
     "joi-model": "^0.0.8",
     "nodemon": "^2.0.4"
   },
