--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "start": "nodemon ./app.js"
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [
     "test",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-joi-validation": "^4.0.3",
     "nodemon": "^2.0.4"
